--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pay Pagamentos</title>
+    <title>Pagamento</title>
   </head>
   <body style="padding: 0; margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
